<resources>
    <string name="app_name">Appka</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="zadejte_cislo">Zadejte cislo</string>
    <string name="btn_1text">Is this Prime number?!</string>
    <string name="play">Play</string>
    <string name="clicker">Clicker</string>
    <string name="timer">Timer</string>
</resources>